- changed stormlib to it's 32 bit version
- started redoing trade, added missing checks (not quite done yet)