@@ -26,12 +26,14 @@ namespace WCell.RealmServer.Spells.Auras.Handlers
 	public class ModSkillTalentHandler : AuraEffectHandler
 	{
 		Skill skill;
-		
+
 		protected override void Apply()
 		{
-			if (m_aura.Auras.Owner is Character) {
+			if (m_aura.Auras.Owner is Character)
+			{
 				skill = ((Character)m_aura.Auras.Owner).Skills[(SkillId)m_spellEffect.MiscValue];
-				if (skill != null) {
+				if (skill != null)
+				{
 					skill.Modifier += (short)EffectValue;
 				}
 			}
@@ -39,7 +41,8 @@ namespace WCell.RealmServer.Spells.Auras.Handlers
 
 		protected override void Remove(bool cancelled)
 		{
-			if (skill != null) {
+			if (skill != null)
+			{
 				skill.Modifier -= (short)EffectValue;
 			}
 		}
